This is the mod file

--- a/one.html
+++ b/one.html
@@ -1,15 +1,21 @@
 <html>
+
 <head>
     <title>Title</title>
     <style>
-        *{
-           font-family: 'Comic Sans';
-           font-style: italic;
-           padding-inline-end: 2pt;
-           ruby-align: center;             
+        * {
+            font-family: 'Comic Sans';
+            font-style: italic;
+            padding-inline-end: 2pt;
+            ruby-align: center;
         }
     </style>
 </head>
-Hey There
-<input id="txt"><button id="btn">Click Me</button>
+
+<body>
+    This page has been modified so that you can all your stuff quickly....
+    <input id="txt">
+    <button id="btn">Click Me</button>
+</body>
+
 </html>
